packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/event-type-time-span-start-not-datetime.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event definition validation, verify
if event types that define a time span having
a start property that is not a datetime value
are rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
      <objecttype name="b" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:0:cs"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" timespan-start="a"  timespan-end="b" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="b" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
          <property name="b" object-type="a" description="b" unique="false" optional="false" multivalued="false" merge="drop"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
